--- a/.gitignore
+++ b/.gitignore
@@ -7,11 +7,16 @@ __pycache__/
 wandb/
 benchmark/
 save/
+slurm/
+figures/
+tex/
 
 *sh
+*.tex
 
 test_lhs2rhs.py
 test_llama3.py
 data_check.py
 
 test_llm4syn_jaccard.py
+test_tgtope2ceq.py
