--- a/data/.gitignore
+++ b/data/.gitignore
@@ -3,3 +3,5 @@ solid-state_dataset_2019-06-27_upd.json
 solutionsynthesis_dataset_202185.json
 ionization_energies.csv
 mpids_ceder.txt
+
+LLMSYNTHESIS_test_quantumweights_0.csv
